<resources>
    <string name="app_name">ECommerce_Rifqi</string>
    <string name="home">Home</string>
    <string name="fav">Favorite</string>
    <string name="profile">Profile</string>
    <string name="txt_loading">Waiting…</string>
    <string name="txt_old_pass">Old Password</string>
    <string name="txt_new_pass">New Password</string>
    <string name="txt_confirm_new_pass">Confirm New Password</string>
    <string name="txt_save">Save</string>
    <string name="txt_email">Email</string>
    <string name="txt_pass">Password</string>
    <string name="txt_confirm_pass">Confirm Password</string>
    <string name="txt_name">Name</string>
    <string name="txt_phone">Phone Number</string>
    <string name="txt_gender">GENDER</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_login">Login</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_change_lang">Change Language</string>
    <string name="txt_change_pass">Change Password</string>
    <string name="select_language">SELECT LANGUAGE:</string>
    <string name="txt_insert_image">Please insert an image file first!</string>
    <string name="txt_search">Search…</string>
    <string name="txt_sort">Sort By</string>
    <string name="txt_empty">Data is empty</string>
    <string name="txt_sortirAZ">From A to Z</string>
    <string name="txt_sortirZA">From Z to A</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_no_notification">No Notification</string>
    <string name="txt_detail_product">Detail Product</string>
    <string name="txt_stock">Stock</string>
    <string name="txt_size">Size</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_type">Type</string>
    <string name="txt_desc">Description</string>
    <string name="txt_buy">Buy</string>
    <string name="txt_trolley">+Trolley</string>
    <string name="txt_laptop">Laptop</string>
    <string name="txt_price">Price</string>
    <string name="txt_other_product">Other Product</string>
    <string name="txt_search_history">Search History</string>
    <string name="txt_out_stock">Out of Stock</string>
    <string name="txt_buy_now">Buy Now</string>
    <string name="txt_buy_success">Your Order is Successful</string>
    <string name="txt_give_rating">Give Your Rating</string>
    <string name="txt_submit">SUBMIT</string>
    <string name="txt_product_in_cart">Product is already in the trolley</string>
    <string name="txt_want_see">Want to see the trolley?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_to_cart">Go to trolley</string>
    <string name="txt_add_cart">Product has been added to trolley!</string>
    <string name="txt_delete_notification">Are you sure you want to delete this notification?</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_delete_product">Delete Product</string>
    <string name="txt_checked">None have been checked yet</string>
    <string name="txt_multiple">Multiple Select</string>
    <string name="txt_payment">Choose Payment Methode</string>
    <string name="txt_register">No empty data allowed!</string>

</resources>