<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/iv_register"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>

        <FrameLayout
            android:id="@+id/fl_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_register"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_pp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_register"/>

            <android.widget.ImageButton
                android:id="@+id/btn_upload_pp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_gravity="end|bottom"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_card2"
                android:src="@drawable/ic_camera" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            app:layout_constraintTop_toBottomOf="@id/fl_register"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:hint="@string/txt_email"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_pass"
                app:endIconMode="password_toggle"
                android:layout_below="@id/input_email"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_pass_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_confirm_pass"
                android:layout_below="@id/input_old_pass"
                app:endIconMode="password_toggle"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass_confirm"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_name"
                android:layout_below="@id/input_pass_confirm"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPersonName"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_phone"
                android:layout_below="@id/input_name"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:inputType="number"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_phone"
                android:fontFamily="@font/medium"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@id/input_phone"
                android:text="@string/txt_gender"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/rb_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_gender"
                android:orientation="horizontal"
                android:layout_alignStart="@id/tv_gender">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_male"
                    android:fontFamily="@font/regular"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_female"
                    android:fontFamily="@font/regular"
                    android:layout_marginStart="120dp"/>

            </RadioGroup>

            <android.widget.Button
                android:id="@+id/btn_signup"
                android:layout_width="278dp"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:text="@string/txt_signup"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:layout_below="@id/rb_group"
                android:layout_centerHorizontal="true"/>

            <android.widget.Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/txt_login"
                android:layout_marginTop="60dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/bg_btn2"
                android:layout_below="@id/btn_signup"/>


        </RelativeLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>