<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/tool_bar_cp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="6dp">


        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:text="@string/txt_change_pass"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:layout_toEndOf="@+id/btn_back"
            android:textSize="18sp"
            android:fontFamily="@font/bold"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/txt_old_pass"
        app:endIconMode="password_toggle"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_cp"
        app:layout_constraintBottom_toTopOf="@id/input_new_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_new_pass"
        app:endIconMode="password_toggle"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_old_pass"
        app:layout_constraintBottom_toTopOf="@id/input_confirm_new_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_confirm_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_confirm_new_pass"
        app:endIconMode="password_toggle"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_new_pass"
        app:layout_constraintBottom_toTopOf="@+id/btn_save">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_new_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btn_save"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/txt_save"
        android:clickable="false"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_new_pass"/>

</androidx.constraintlayout.widget.ConstraintLayout>